--- a/_posts/2017-03-21-REST-APIs.md
+++ b/_posts/2017-03-21-REST-APIs.md
@@ -1,159 +1,196 @@
 ---
 layout: post
-title: 'REST API's'
-subtitle: Rest Api information & Testing - by Simon Kerr
-bigimg: /img/path.jpg
-published: true
+published: false
+title: Untitled
+---
+### What is an API?
+
+# What is an API?
+An API is short for Application Programming Interface.  This is essentially a way of sharing application data over the internet (HTTP API). Using a magnitude of API's we can build a hybrid application calling information from various sources e.g twitter, google, facebook, youtube etc all under one roof.  They are also extremely useful for integrating with third parties.  For example, if we have an application that allows you to Create, Edit, Delete and Update products, we could create a HTTP API with the following:
+
+[@GET - View Products](http://example.com/view_products)
+
+[@POST - Create A Product](http://example.com/create_new_product?productName=example)
+
+[@PUT - Update a Product By Id](http://example.com/update_product?id=11&name=example)
+
+[@DELETE - Delete Product By Id](http://example.com/delete_product?id=11)
+
+Not so sure I like the above approach..
+
 ---
 
-This post is a short article outlining some simple uses of the SQL Queries.  SQL In short stands for Structured Query Language.  For the purpose of this blog post, I will be discussing Microsoft SQL Server and SQL Server Management Studio.
+### What is REST?
+REST stands for REpresentational State Transfer (RE-S-T).  This is a standard way of creating HTTP API's which typically consist of the following actions: View, Create, Edit and Delete which can be mapped directly to HTTP verbs: GET, POST, PUT, DELETE.  These are outlined below:
 
+**GET:** `Used to Read/Retrieve a representation of a resource.  Get returns a representation in XML/JSON and typically a response code of 200.`
 
-- Microsoft SQL Server - This is our actual instance which houses our database(s) and corresponding data (and various other things, but for the purpose of this post, those are out of scope)
+**POST:** `Used to typically CREATE new resources.  POST typically returns a response code of 201. POST is non-idempotent, care is advised.`
 
-- SQL Server Management Studio - This is an application we can use to connect to our database instance to manage the database(s), data, stored procedures and users etc (again, various other things are available using this, but for the purpose of this post, those are out of scope).  We use this studio user interface as a means to write SQL queries to communicate with our database(s).
+**PUT:** `Used to typically UPDATE existing resources.  PUT is idempotent. PUT typically returns a response code of 200 (or 204 if empty body)`
 
-In order to execute queries we need to connect to our database instance using SSMS (SQL Server Management Studio).  We can Launch the application and depending on how the instance was setup initially, connect via windows authentication or SQL Server Authentication, providing a Login/Password.  note: Default super admin username will be "sa" - Tho it is highly advised to disable this account for security/permissions reasons, some ISO compliance and other certification actually requires it.
+**DELETE:** `Used to typically DELETE existing resources.  DELETE typically returns a 200 OK response code or 404 not found if resource cannot be found.`
 
+Following on from the previous example then, If we wanted to view ALL products, our URL would look like this:
 
-### View all records in a particular database table
-List all columns with every record in Employees:
-
-    Select * FROM Employees
+	@GET - (http://example.com/products)
     
----
-    
-### View certain columns from a particular database table
-Lists all records in the Employees table, however results will only return the EmployeeID and FirstName columns:
+Creating a new product by POSTING the data
 
-	Select EmployeeID, Employee FirstName FROM Employees 
-    
----
-    
-### Utilising the WHERE clause to filter out unwanted data
-Lists every record from the Employees table (displaying their EmployeeID and FirstName column data only, However - Only records where the Firstname is "Simon" will be displayed to the user:
+	@POST - (http://example.com/products)
+    Data =
+  	Name: NewProduct
 
-	Select EmployeeID, Employee FirstName FROM Employees WHERE FirstName = 
-	'Simon' 
-    
----
-    
-### WHERE clause opposition - where something is not
-Lists every record from the Employees table (displaying their EmployeeID and FirstName column data only, However - Only records where the Firstname is not "Simon" will be displayed to the user:
 
-	Select EmployeeID, Employee FirstName FROM Employees WHERE FirstName <> 
-	'Simon' 
-    
----
-    
-### BEFORE or AFTER a particular Date
-Lists all employees who where hired After this particular date.  We can also use WHERE HireDate <= '1-June-2016' to get employees who were hired Before this particular date.  Pay attention to the select columns, we will only be getting back EmployeeID and FirstName columns (comma seperated):
+To View a particular product, we would GET again, e.g Product ID = 123
 
-	SELECT EmployeeID, FirstName FROM Employees WHERE HireDate >= '1-June-2016'
+	@GET -  (http://www.example.com/products/123) 
 
-    
-### Multiple WHERE clauses using the AND operator, BETWEEN operator too!
-As you can imagine, we will return every employee who was hired between these two dates, displaying only their ID and First name columns.  However this can be rewritten using a fancier BETWEEN operator.  WHERE HireDate BETWEEN '1-JULY-2016' AND '10-July-2016'
+Update our product using PUTTING the new data
 
-	SELECT EmployeeID, FirstName FROM Employees WHERE (HireDate >= '1-July-2016')
-    AND (HireDate <= '10-July-2016') 
-    
-### Multiple Choice WHERE clause : IN and OR operators
-Previous examples are ok for short examples, however what if we need to find employees of certain ages? 18, 25, 31 ?  Here we utilise the IN operator, we can however use the OR operator in a two case scenario.
-    
-    SELECT * FROM Employees WHERE Age = 18 OR 20  -> OR Operator
-    SELECT * FROM Employees WHERE Age IN (18, 25, 31) -> IN Operator
-    
-### Reversing the IN Operator to find results NOT IN
-We can also use the NOT IN to reverse the IN operator, similar to how we reversed = with <> previously.  Here is an example of all employees who's age is NOT 18, 25, 31 or 40
-    
-    SELECT * FROM Employees WHERE Age NOT IN (18,25,31,40) -> NOT IN Operator
-    
-### The Powerful LIKE operator and its magnitude of uses
-
- The LIKE operator uses pattern matching with wildcard chararcters.  these wildcards are listed below:
-
-      _ (underscore) : matches any single character
-      % : matches a string of one or more characters
-      [] : matches any single character within the specified range (e.g. [d-g]
-      [^] : matches any single character not within a specified range (e.g [d-g]
-
-      Doesn't make much sense yet I would imagine, lets look at some examples then.
-
-      WHERE FirstName LIKE '_im' -> All 3 letter firstnames that end in "im" - Tim
-      WHERE FirstName LIKE '%mon' -> All firstnames that end with mon -> simon
-      WHERE FirstName LIKE '%mon%' -> All firstnames that contain mon -> Monty
-      WHERE FirstName LIKE '[JT]im' -> All 3 letter firstnames that end in "im" but
-      also begin with J or T -> e.g Tim & Jim, Dim/Nim/Bim would not be returned
-      WHERE FirstName LIKE 'm[^c]%' -> All firstnames beginning with M and the 2nd
-      letter is not c -> excluding all Mcc names e.g McCutchin
-
-NOT IN can also be used with these operator/wildcards and we can also apply
-multiple of them into the WHERE clause, see below:
-
-    SELECT * FROM Employee WHERE (FirstName NOT LIKE '%mon%') AND (Surname NOT 
-    LIKE '%Ker'
-    
-### Get some ORDER in your results
-
-Order Ascending -> 
-
-	SELECT * FROM Employees WHERE Firstname <> 'Simon'ORDER BY FirstName ASC
-	
-Above we simply find ALL employees whos firstname IS NOT Simon and order the results by Firstname Ascending
-    
-    SELECT * FROM Employees WHERE Firstname <> 'Simon'ORDER BY FirstName DESC
-	
-Above we simply find ALL employees whos firstname IS NOT Simon and order the results by Firstname Descending
-    
-### Counting how many records exist in the table
-
-	SELECT COUNT(*) FROM Employee (Returns a numerical value for every record in
-	the table
-    
-### INSERT new rows into the table
-
-	INSERT INTO Employees (Firstname, Surname, Role) VALUES ('Simon', 'Kerr', 
-	'QA Engineer')
-	
-### UPDATE and SET Data (Used to update existing records)
-Update a record with EmployeeID of 250 and set the First and Surname.
-
-NOTE: If you forget to include the WHERE clause here you will update EVERY 
-record in the table, its always advised to take backups when tinkering with
-the data outside of READ ONLY scenarios.
-
-	UPDATE EMPLOYEES SET FirstName = 'Simon', Surname = 'Kerr' WHERE EmployeeID
-    = 250 
-    
-### DELETE records from the table
-Delete all employees with an employeeID of 250 (single typically)
-
-	DELETE FROM EMPLOYEES WHERE EmployeeID = 250 
-    
-Delete all employees where the country is Northern Ireland (multiple)
-
-    DELETE FROM EMPLOYEES WHERE Country = 'Northern Ireland'
-    
-Delete every record, tread carefully!
-
-    DELETE * FROM Employees 
-    
-### Selecting a number of records
-Return the top 1000 records showing only EmployeeID only
- 
-    SELECT TOP 1000 EmployeeID FROM Employee
+  	 @PUT - (http://www.example.com/products/123)
+     Data = 
+     Name: NewName
+     Price: $25`
    
-Return the top 5% records showing EmployeeID and FirstName
-    
-    SELECT TOP 5 PERCENT EmployeeID, FirstName FROM Employee
+Delete our recently edited product using DELETE:
 
-    
-### Min() and Maximum() Functions
-Find the cheapest product in the Items table
-    
-    SELECT MIN(Price) AS smallestPrice FROM Items
+    @DELETE -  (http://www.example.com/products/123)
+
+You might have noticed from the previous examples that REST URLs use a consistent naming scheme. When you are interacting with an API, you are almost always manipulating some sort of object. In our examples, this is a Product. In REST terminology, this is called a Resource. The first part of the URL is always the plural form of the resource:
+
+Example 1 - Always used when referring to Add One or List All Actions
+
+	Product Object = http://www.example/products
+
+Example 2 - Always used when referring to Add One or List All Actions
+
+	Widget Object = http://www.example/widgets   
+
+Example 3 - Always used when referring to Add One or List All Actions
+
+	Person Object = http://www.example/people
+
+However when working with a particular resource, you specify the particular ID to the URL:
+Example 1 - A particular product resource
+
+    Product Object = http://www.example/products/123
+
+Example 2 - A particular widget resource
+
+    Widget Object = http://www.example/widgets/456
+
+Example 1 - A particular person resource
+
+    Person Object = http://www.example/people/789    
+
+This URL would typically be used when you want to View, Edit or Delete a particular resource
+
+### Nested Resources
+Lets say our products have multiple People associated with them, to list all the users associated with a particular product resource we would use the following:
+
+List all users associated with a Product resource:
+
+	 @GET (http://example.com/products/123/users)
+
+Adding a new user against a particular Product:
+
+     @POST (http://www.example.com/products/123/users)
+     Data = 
+     Name: Simon
    
-Find the dearest product in the Products table
+Best practice generally recommends that you do not go too deep with nested resources, typically nothing more than two levels deep, but like a lot of things with REST there is very little *concrete* specification / design guidelines, it offers that freedom to the creators as opposed to SOAP which is rather heavily governed.
 
-    SELECT MAX(Price) AS smallestPrice FROM Products
+### HTTP Response Codes
+
+It is important to respond with the correct response code to the type of request that was made.  When a request is made the **Server** will respond with a code which corresponds to wether the request was successful or not and how the client should then proceed.  There are a range of different potential codes, these are outlined below:
+
+    1xx = informative
+
+    2xx = Success
+
+    3xx = Redirection
+
+    4xx = User Error
+
+    5xx = Server Error
+
+# Success Codes:
+
+    200 - OK (Default)  
+
+    201 - Creation success`  
+
+    202 - Accepted (Often used when Deleting resources)
+
+# User Error Codes:
+
+    400 - Bad Request (Input error/bad data typically)
+
+    401 - Lack of Authorisation (Required to login/auth)
+
+    404 - Not found (Bad URL)
+
+    405 - Method isn't permitted (Wrong Method Type)
+
+    409 - Confliction (Trying to duplicate the resource with a PUT request)
+
+    415 - Unsupported media Type
+
+
+For all others ranging 1xx - 6xx, please see the following documentation (https://en.wikipedia.org/wiki/List_of_HTTP_status_codes)
+
+### API Response Formats
+When we make an HTTP request we can specify which format we wish to receive back, However it is the **Servers** responsibility to respond with the format requested.  For example if we wish to display a webpage we want to be given back HTML.  REST API's typically respond in JSON nowadays which stands for JavaScript Object Notation.  So when requesting and wanting JSON back -
+
+    GET /products
+    Accept: application/json
+
+This will return an array of our products, formatting in JSON
+
+    [
+      {
+        id: 123,
+        name: 'Product One'
+        price: '25'
+      },
+
+      {
+        id: 456,
+        name: 'Product Two'
+        price: '350'
+      }
+    ]
+
+If the user requests a format that we haven't implemented, what do we do? You can throw some type of error, but we should really be enforcing JSON as the standard response format
+
+### What to lookout for when Testing REST API's?
+
+1. Http Responses return correct status codes, examine code to see if custom Responses are being built and returned, for example a successful add (@POST) may return a 201 - Created rather than the 200 - OK.
+
+2. Http Headers are returning any customisations, we can return unique header / meta data, for example Location baseURI/absolutePath etc, ensure these are accounted for in the returned response
+
+3. Http Content type is returned accurately,  Our client may be asking for XML/JSON but is the server coping with it? what are you receiving back?  As well as the request response type being for example TEXT_PLAIN, what happens? [application/json etc]
+
+4. Resource URI's are logically mapped and well designed, e.g /webapi/messages/1/comments/2 will return commentID 2 of MessageID 1 following a successful @GET request, this is a good design, /webapi/getMessages?messageId=1 in this instance, is subpar design - WHY? when we want to then add messages we need additional paths to handle it? or POST to getMessages? with an add? with the design example #1 we can handle all our CRUD operations smartly and logically.
+
+5. @Context @PathParam, @QueryParam, @MatrixParam, @HeaderParam, @CookieParam are all being received by the server accurately, extremely important when exception handling and responding suitably to the client.
+
+6. Exception handling is well thought out and implemented, a generic handler throwing throwable is garbage (all exceptions will be caught by it), smart use of WebApplicationException is ideal as they come preconditioned with certain status codes etc, however we can drill down even more than that to a child Exception, for example - build a custom response in our ExceptionWrapper class to catch DataNotFoundException and return it to the client when the exception occurs - Why? We can return a JSON response to the client with accurate information on the problem, this stops our exception bubbling to hit the Framework/Tomcat handler which will return HTML, we dont want our REST API returning HTML and we want our developer/clients to receive meaningful JSON formatted data back in the event of errors.
+
+7. QueryParamaters are logically designed and are successfully applied to them in the backend, for example ?year=2014&month=Jan - ensure both the clients input are successfully captured, and the data is filtered properly according to code logic, good chance to create some exceptions here, nullPointerException for example, investigate and attempt to break it.
+
+8. Ultimately Data returned is accurate! Ensure no data leakage is occuring and the client is unable to manipulate our API in order to receive non permitted data, its smart to build in some sort of filtering or pagination to the responses using QueryParamaters for the client, for example with big data I might only want 10 messages back from getAllMessages() @GET - /webapi/messages?size=10
+
+9. Security is well designed, authentification is solid, am I able to pass in a queryparamater to see someone elses list of products from my company? this is a security problem.
+
+10. API implements HATEOAS if applicable, there are hyperlinks if you like in the responses, for example I'm viewing a comment via @GET /webapi/messages/1/comments/2 - my JSON response should have links to self, the message linked to the comment and the profile or author of said message too,  think of it as a quick way to navigate like web hyperlinks, this allows developers/clients to work more efficiently.
+
+11. @PUT @GET @POST @DELETE operations are all working as expected, this will require access to the source to verify (whitebox).
+
+12. Response times are respectable, obviously big data can affect this and working on LAN is not a real representation sometimes, however it should not be doing any sort of hanging, crashing or extremely long response times.  
+
+13. Build up a POSTMAN suite as soon as possible to automate the execution of basic tests of your API, get verifications and assertions in there and attach it onto the build pipeline to have executing on each deployment, consider setting up NEWMAN to generate a report and email to interested parties automatically with the results.
+
+14. idempotence testing - what do we mean by this? idempotence basically means if you send the same request e.g a @POST is NON-IDEMPOTENT multiple times its going to be creating data each time and affecting the database / webapplication data.  @POST needs some care and if applicable try build in some logic for it / smartly design your web application to account for postback via the users browser. @PUT @GET and @DELETE are all considered IDEMPOTENT - WHY? Multiple GET is safe, Multiple DELETE is fine - content not found worst case as its been deleted, @PUT is safe - Multiple PUT will just overwrite an existing object
+    
